# polgrad

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  drift.yml  publish.yml
docs/: conventions.md
docs/derivations/: advantages.md  aggregation.md  goldens.md  kl.md  losses.md  variants.md
docs/diagnostics/: clipping.md  entropy.md  ess.md  length_bias.md  mismatch.md
examples/: deviation_report.py  diagnose_run.py  which_grpo_am_i_running.py
src/polgrad/: __init__.py  _pytest_plugin.py  _validation.py  advantages.py  aggregate.py  kl.py  losses.py  registry.py  testing.py
src/polgrad/conformance/: __init__.py  deviations.py  harness.py
src/polgrad/conformance/_vendor/: __init__.py  openrlhf_loss.py  verl_core_algos.py
src/polgrad/diagnostics/: __init__.py  clipping.py  entropy.py  ess.py  length_bias.py  mismatch.py
src/polgrad/verify/: __init__.py  goldens.py  gradcheck.py  mc.py
tests/: conftest.py  strategies.py  test_advantages.py  test_aggregate.py  test_conformance.py  test_cross.py  test_diagnostics_clipping.py  test_diagnostics_entropy.py  test_diagnostics_ess.py  test_diagnostics_length_bias.py  test_diagnostics_mismatch.py  test_drift_tool.py  test_kl.py  test_losses.py  test_registry.py  test_testing_api.py  test_validation.py  test_vendor.py  test_verify.py  test_verify_mc.py
tests/fixtures/: openrlhf_losses.json  trl_reimpl_losses.json  verl_losses.json  verl_reimpl_losses.json
tools/: check_upstream_drift.py  record_fixtures.py
