[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polgrad"
version = "0.1.0"
description = "Reference semantics, conformance testing, and pathology diagnostics for LLM policy-gradient post-training"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Saif Punjwani", email = "saifpunjwani1230@gmail.com" }]
keywords = [
    "reinforcement-learning",
    "rlhf",
    "post-training",
    "policy-gradient",
    "grpo",
    "ppo",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "hypothesis>=6.100",
    "numpy>=1.26",
    "scipy>=1.11",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/SaifPunjwani/polgrad"
Issues = "https://github.com/SaifPunjwani/polgrad/issues"
Changelog = "https://github.com/SaifPunjwani/polgrad/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/polgrad"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# Unicode math in docstrings is part of the documentation conventions (docs/conventions.md).
allowed-confusables = ["−", "γ", "σ", "μ", "δ", "ε", "λ", "ρ", "·", "α", "β"]

[tool.ruff.lint.per-file-ignores]
# Vendored upstream code is kept byte-faithful; only import stripping is permitted.
"src/polgrad/conformance/_vendor/*" = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src/polgrad"]

[[tool.mypy.overrides]]
module = "polgrad.conformance._vendor.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning:polgrad.*"]
